feat(impl):[TRI-1195] fix test